crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__predicates__select_where_in_variable.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "series": [
          1
        ]
      }
    ]
  },
  {
    "rows": []
  }
]
