crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__predicates__select_where_name_eq.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 129,
        "Title": "Houses Of The Holy"
      }
    ]
  }
]
